--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -660,10 +660,15 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <!-- Gender Question -->
                         <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Gender__c != 'Do not ask' && !isBlank(eventPage.Ask_Gender__c), true, false)}">
                             <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Gender__c, 'require'), 'slds-is-required', '')}">
-                                <apex:outputLabel value="Gender" for="Gender" styleClass="slds-form-element__label"/>
+                                <apex:outputLabel for="Gender" styleClass="slds-form-element__label">
+                                    Gender
+                                    <apex:outputText escape="false" rendered="{!IF(eventPage.Ask_Gender__c == 'Ask and require', true, false)}">
+                                        <abbr class="slds-required" title="required">*</abbr>
+                                    </apex:outputText>
+                                </apex:outputLabel>
                                 <div class="slds-form-element__control">
                                     <div class="slds-select_container">
-                                        <apex:selectList value="{!newEvtReg.Registrant_Gender__c}" size="1" id="sex" multiselect="false" required="{!IF(eventPage.Ask_Gender__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Gender__c == 'Ask and require', 'required', '')}" disabled="{!contactSet}">
+                                        <apex:selectList value="{!newEvtReg.Registrant_Gender__c}" size="1" id="Gender" multiselect="false" required="{!IF(eventPage.Ask_Gender__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Gender__c == 'Ask and require', 'required', '')}" disabled="{!contactSet}">
                                             <apex:selectOptions value="{!sexDD}"/>
                                         </apex:selectList>
                                     </div>
@@ -671,11 +676,15 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </div>
                         </apex:outputPanel>
 
-
                         <!-- Pronouns Question -->
                         <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Pronoun__c != 'Do not ask' && !isBlank(eventPage.Ask_Pronoun__c), true, false)}">
                             <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Pronoun__c, 'require'), 'slds-is-required', '')}">
-                                <apex:outputLabel value="Pronouns" for="Pronoun" styleClass="slds-form-element__label"/>
+                                <apex:outputLabel for="Pronouns" styleClass="slds-form-element__label">
+                                    Pronouns
+                                    <apex:outputText escape="false" rendered="{!IF(eventPage.Ask_Pronoun__c == 'Ask and require', true, false)}">
+                                        <abbr class="slds-required" title="required">*</abbr>
+                                    </apex:outputText>
+                                </apex:outputLabel>
                                 <div class="slds-form-element__control">
                                     <div class="slds-select_container">
                                         <apex:selectList value="{!newEvtReg.Registrant_Pronouns__c}" size="1" id="pronoun" multiselect="false" required="{!IF(eventPage.Ask_Pronoun__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Pronoun__c == 'Ask and require', 'required', '')}" disabled="{!contactSet}">
@@ -823,24 +832,6 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </div>
                             </apex:outputPanel>
 
-                            <!-- Gender Question -->
-                            <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6" layout="block" rendered="{!IF(eventPage.Ask_Gender__c != 'Do not ask' && !isBlank(eventPage.Ask_Gender__c), true, false)}">
-                                <div class="slds-form-element {!IF(CONTAINS(eventPage.Ask_Gender__c, 'require'), 'slds-is-required', '')}">
-                                    <apex:outputLabel for="sex" styleClass="slds-form-element__label">
-                                        Sex
-                                        <apex:outputText escape="false" rendered="{!IF(eventPage.Ask_Gender__c == 'Ask and require', true, false)}">
-                                            <abbr class="slds-required" title="required">*</abbr>
-                                        </apex:outputText>
-                                    </apex:outputLabel>
-                                    <div class="slds-form-element__control">
-                                        <div class="slds-select_container">
-                                            <apex:selectList value="{!newEvtReg.Registrant_Gender__c}" size="1" id="sex" multiselect="false" required="{!IF(eventPage.Ask_Gender__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Gender__c == 'Ask and require', 'required', '')}" disabled="{!contactSet}">
-                                                <apex:selectOptions value="{!sexDD}"/>
-                                            </apex:selectList>
-                                        </div>
-                                    </div>
-                                </div>
-                            </apex:outputPanel>
 
                             <!-- Program of interest question -->
                             <apex:outputPanel layout="none"
