removed commented out code, removed non-used component, removed program lookup, removed contact record fields

--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -18,8 +18,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
             <script>
                 dataLayer = [{
                     <!--'school': '{!eventPage.School__r.Name}',-->
-                    'eventlabel': '{!eventPage.Event_Name__c}'
-                    //'startDate': '{!evtInstance.Instance_Start_Date__c}',
+                    'eventlabel': '{!eventPage.Event_Name__c}',
+                    'startDate': '{!evtInstance.Instance_Start_Date__c}'
                     // 'location':'{}'
                 }];
             </script>
