--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -22,7 +22,9 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 }];
             </script>
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
+            <link href="{!URLFOR($Resource.SummitEventsAssets, '/chosen/chosen-ust.css')}" rel="stylesheet" type="text/css"/>
             <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/register.js')}" type="text/javascript"/>
+            <script src="{!URLFOR($Resource.SummitEventsAssets, '/chosen/chosen.ust.jquery.min.js')}" type="text/javascript"/>
         </apex:define>
 
         <apex:define name="body">
@@ -289,7 +291,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </div>
 
                         <!-- REGISTRANT LAST NAME -->
-                        <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-large-size_3-of-6">
+                        <div class="slds-col slds-p-around_x-small slds-small-size_6-of-6 slds-large-size_3-of-6">
                             <div class="slds-form-element slds-is-required">
                                 <apex:outputLabel for="lastName" styleClass="required slds-form-element__label">
                                     Last name <abbr class="slds-required" title="required">*</abbr>
